Fixed thumbnail layout and image cropping on Admin Edit Search Saved

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -180,15 +180,15 @@ input[type=radio]:checked:before { margin-bottom: 2px!important; }
 .rbvideo { position: relative; padding-bottom: 56.25%; /* 16:9 */ padding-top: 25px; height: 0; }
 .rbvideo object, .rbvideo iframe, .rbvideo embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
-/* Admin Welcome */
+/* Welcome */
 #rbquick-links li { float: left; width: 50%; }
 #rbquick-links li:nth-child(odd) { clear: left; }
 .welcome-panel-column#welcome-video { margin-right: 15px; margin-bottom:30px; float:right; width:40% }
 
-/* Admin Manage Profiles */
+/* Manage Profiles */
 table.widefat tr td.column-ProfilesProfileDate span { display: block; }
 
-/* Admin Search Results */
+/* Search Results */
 table.widefat tr th, table.widefat tr td { border-bottom: 1px solid #e5e5e5; }
 table.widefat tr.inactive { background: #e0979f; }
 table.widefat tr.active { background: #a9d59d; }
@@ -196,9 +196,19 @@ table.widefat tr.archived { background: #c0c0c0; }
 table.widefat tr.pending { background: #e8f6ff; }
 table.widefat tr.active-notvisible { background: #d2d49b; }
 
-/* Admin Saved Searches */
-#searchsaved-profiles { height: 500px; overflow-y: scroll;   padding: 0 0 10px 10px; background: #EAEAEA; border: 1px solid #dedede; }
-#searchsaved-profiles .saved-profile { float: left; max-width: 110px; height: 175px; margin: 10px 10px 0 0; }
-#searchsaved-profiles .saved-profile span { display: block;margin-bottom: 5px; }
-#searchsaved-profiles .saved-profile .thumbnail { max-width: 100%; height: 150px; overflow: hidden; }
-#searchsaved-profiles .saved-profile .thumbnail img { max-width: 100%; }
+/* Saved Searches */
+.searchsaved-profiles { overflow: hidden; padding: 0 0 10px 10px; background: #EAEAEA; border: 1px solid #dedede; }
+.agency_page_rb_agency_searchsaved hr { clear: both; }
+.searchsaved-profiles .saved-profile { float: left; margin: 10px 10px 0 0; }
+.searchsaved-profiles .saved-profile .thumbnail { overflow: hidden; max-width: 100%; margin-top: 5px; }
+.searchsaved-profiles .saved-profile .thumbnail img { max-width: 100%; }
+
+/* Edit Saved Searches */
+#searchsaved-edit { width: 100%; }
+#searchsaved-edit .saved-profile { max-width: 150px; height: 225px; }
+#searchsaved-edit .saved-profile .thumbnail { height: 200px; }
+
+/* Email Saved Searches */
+#searchsaved-email { height: 500px; overflow-y: scroll; margin-top: 5px; }
+#searchsaved-email .saved-profile { max-width: 110px; height: 175px; }
+#searchsaved-email .saved-profile .thumbnail { height: 150px; }
